infrastructure/istio/destination-rule-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default-mtls
  namespace: microservices
spec:
  host: "*.microservices.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
